--- a/index.html
+++ b/index.html
@@ -5,26 +5,31 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
 	<title>공공알림문자 서비스</title>
-	<link rel="stylesheet" type="text/css" href="css/common.css">
+	<link rel="stylesheet" href="css/common.css">
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-	<script src="js/common.js"></script>
-</head> 
+</head>
 
 <body class="wide_gray"> 
+
+<!-- wrap -->
 
 <div id="wrap">
 
 	<!-- header -->
+
 	<div class="fix" id="header">
 		<h1><a href="index.html"><img src="img/telecom.png" alt=""></a></h1>
 		<span>010-0000-0000</span>
 	</div>
+
 	<!-- //header -->
 
 	<!-- container -->
+
 	<div id="container">
 		
 		<!-- content -->
+
 		<div class="wide_gray" id="content">
 			<div class="things">
 				<p>공공 기관에서 개인 고객들에게 발신하는 통지서를 개인 고객들이 수신할수 있도록 하는 무료 부가서비스</p>
@@ -103,18 +108,26 @@
 			</div>
 
 		</div>
+
 		<!-- //content -->
 
 	</div>
+
 	<!-- //container -->
 
 	<!-- footer -->
+
 	<div id="footer">
 		<p class="copyR">COPYRIGHT © SK telecom. ALL RIGHTS RESERVED.</p>
 	</div>
+
 	<!-- //footer -->
 
 </div>
+
+<!-- //wrap -->
+
+<script src="js/common.js"></script>
 
 </body> 
 </html>
