--- a/step.html
+++ b/step.html
@@ -5,24 +5,30 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
 	<title>공공알림문자 서비스</title>
-	<link rel="stylesheet" type="text/css" href="css/common.css">
+	<link rel="stylesheet" href="css/common.css">
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-	<script src="js/common.js"></script>
-</head> 
+</head>
 
 <body> 
+
+<!-- wrap -->
 
 <div id="wrap">
 
 	<!-- header -->
+
 	<div id="header">
 		<h1><a href="index.html"><img src="img/telecom.png" alt=""></a></h1>
 	</div>
+
 	<!-- //header -->
 
 	<!-- container -->
+
 	<div id="container">
+
 		<!-- content -->
+
 		<div id="content">
 			<div class="things t_step">
 				<strong>휴대폰으로 공공기관 통지서를<br>문자로 받아 보세요~</strong>
@@ -94,14 +100,19 @@
 
 			</div>
 		</div>
+
 		<!-- //content -->
+
 	</div>
+
 	<!-- //container -->
 
 	<!-- footer -->
+
 	<div id="footer">
 		<p class="copyR">COPYRIGHT SK TELECOM CO., LTD. ALL RIGHTS RESERVED</p>
 	</div>
+
 	<!-- //footer -->
 
 	<!-- 팝업 -->
@@ -125,6 +136,10 @@
 	</div>
 
 </div>
+
+<!-- //wrap -->
+
+<script src="js/common.js"></script>
 
 </body> 
 </html>
