--- a/step_02.html
+++ b/step_02.html
@@ -5,25 +5,31 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
 	<title>공공알림문자 서비스</title>
-	<link rel="stylesheet" type="text/css" href="css/common.css">
+	<link rel="stylesheet" href="css/common.css">
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-	<script src="js/common.js"></script>
-</head> 
+</head>
 
-<body> 
+<body>
+
+<!-- wrap -->
 
 <div id="wrap">
 
 	<!-- header -->
+
 	<div class="fix" id="header">
 		<h1><a href="index.html"><img src="img/telecom.png" alt=""></a></h1>
 		<span>010-0000-0000</span>
 	</div>
+
 	<!-- //header -->
 
 	<!-- container -->
+
 	<div id="container">
+
 		<!-- content -->
+
 		<div id="content">
 			<div class="join">
 				<h2>공공알림문자 서비스 가입<br>개인정보 활용동의 안내</h2>
@@ -105,14 +111,19 @@
 
 			</div>
 		</div>
+
 		<!-- //content -->
+
 	</div>
+
 	<!-- //container -->
 
 	<!-- footer -->
+
 	<div id="footer">
 		<p class="copyR">COPYRIGHT SK TELECOM CO., LTD. ALL RIGHTS RESERVED</p>
 	</div>
+
 	<!-- //footer -->
 
 	<!-- 팝업 -->
@@ -130,6 +141,10 @@
 	</div>
 
 </div>
+
+<!-- //wrap -->
+
+<script src="js/common.js"></script>
 
 </body> 
 </html>
