--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
 	<title>공공알림문자 서비스</title>
 	<link rel="stylesheet" href="css/common.css">
@@ -17,7 +17,7 @@
 
 	<!-- header -->
 
-	<div class="fix" id="header">
+	<div id="header" class="fix">
 		<h1><a href="index.html"><img src="img/telecom.png" alt=""></a></h1>
 		<span>010-0000-0000</span>
 	</div>
@@ -30,7 +30,7 @@
 		
 		<!-- content -->
 
-		<div class="wide_gray" id="content">
+		<div id="content" class="wide_gray">
 			<div class="things">
 				<p>공공 기관에서 개인 고객들에게 발신하는 통지서를 개인 고객들이 수신할수 있도록 하는 무료 부가서비스</p>
 				<strong>공공알림문자 서비스</strong>
@@ -117,10 +117,8 @@
 
 	<!-- footer -->
 
-	<div id="footer">
-		<p class="copyR">COPYRIGHT © SK telecom. ALL RIGHTS RESERVED.</p>
-	</div>
-
+	<script src="inc/footer.js"></script>
+	
 	<!-- //footer -->
 
 </div>
