--- a/step.html
+++ b/step.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
 	<title>공공알림문자 서비스</title>
 	<link rel="stylesheet" href="css/common.css">
@@ -109,10 +109,8 @@
 
 	<!-- footer -->
 
-	<div id="footer">
-		<p class="copyR">COPYRIGHT SK TELECOM CO., LTD. ALL RIGHTS RESERVED</p>
-	</div>
-
+	<script src="inc/footer.js"></script>
+	
 	<!-- //footer -->
 
 	<!-- 팝업 -->
