--- a/step_02.html
+++ b/step_02.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
 	<title>공공알림문자 서비스</title>
 	<link rel="stylesheet" href="css/common.css">
@@ -17,7 +17,7 @@
 
 	<!-- header -->
 
-	<div class="fix" id="header">
+	<div id="header" class="fix">
 		<h1><a href="index.html"><img src="img/telecom.png" alt=""></a></h1>
 		<span>010-0000-0000</span>
 	</div>
@@ -120,10 +120,8 @@
 
 	<!-- footer -->
 
-	<div id="footer">
-		<p class="copyR">COPYRIGHT SK TELECOM CO., LTD. ALL RIGHTS RESERVED</p>
-	</div>
-
+	<script src="inc/footer.js"></script>
+	
 	<!-- //footer -->
 
 	<!-- 팝업 -->
